Added Facebook login support

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -67,14 +67,8 @@ a {
     font-weight: 400;
     display: block;
 }
-.profile-img{
-    width: 96px;
-    height: 96px;
-    margin: 0 auto 10px;
-    display: block;
-    -moz-border-radius: 50%;
-    -webkit-border-radius: 50%;
-    border-radius: 50%;
+.logo-img{
+    max-width: 100%;
 }
 .new-account{
     display: block;
